<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>deltaiot.exemplar</groupId>
  <artifactId>parent</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <packaging>pom</packaging>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <gson-version>2.12.1</gson-version>
    <jaxws-rt-version>2.3.3</jaxws-rt-version>
    <javafx-version>13-ea+14b</javafx-version>
    <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
    <maven-compiler-plugin-version>3.11.0</maven-compiler-plugin-version>
    <maven-jar-plugin-version>3.4.2</maven-jar-plugin-version>
    <maven-assembly-plugin-version>3.7.1</maven-assembly-plugin-version>
    <maven-shade-plugin-version>3.6.0</maven-shade-plugin-version>
  </properties>
  
  <dependencies>
  </dependencies>

  <modules>
    <module>Simulator</module>
    <module>SimpleAdaptationWithSimulation</module>
    <module>SimulatorGUI</module>
  </modules>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin-version}</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
